15069

It should rather point at "case A" .
```scala
#!/bin/sh
exec scala $$0 $$@
!#

abstract class A0

case class A() extends A0

case class B() extends A0

case class C() extends A0

val list = List( A(), A(), B(), C(), C(), C() )

list filter ( _ match {case A => true; case _ => false} )

###########################################################

[mo@mo-pc Scripts]$$ ./case.scala 
(fragment of case.scala):10: error: not found: value x
val list = List( A(), A(), B(), C(), C(), C() )
                                  ^
one error found
!!!
discarding <script preamble>
```

official 2.8 beta release
